修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -1,9 +1,10 @@
 ---
-title: 2018.10.09资源更新
+title:资源更新
 tags: 新建,模板,小书匠
 grammar_cjkRuby: true
 ---
 
+###  2018.10.09
 混沌商学院更新
 链接:https://pan.baidu.com/s/1j249m0TyKCtHakE5bcsZ5Q 提取码:fg93 
 混沌创新院更新
@@ -16,3 +17,17 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1AsWDrFFFspdzhyj6mnTT5Q 提取码:2t0g 
 亚洲大学～尋找生命的原力
 链接:https://pan.baidu.com/s/1nRkw-Uk8-J8wi6D_SVoKdA 提取码:6727 
+
+### 2018.10.10
+數據與智慧建築（完结）
+链接:https://pan.baidu.com/s/1GfvNHFVctitmLu-2iQ64Rg 提取码:351w
+大數據的創新應用-金融業為例（更新中）
+链接:https://pan.baidu.com/s/1qyYk_aJC1YD-EN-uDCOGxA 提取码:79zl 
+自駕電動車、高性能引擎、AR 前檔投影齊現身 2018 台灣汽車科技創新高峰會 
+链接:https://pan.baidu.com/s/1RLKAlSZFxJkS0bImycMolA 提取码:iz26 
+【完整版】2018.10.07《文茜世界財經週報》
+链接:https://pan.baidu.com/s/1CC0vfKwOlCvhCzXbk9HtVw 提取码:958s 
+10.6～樊登读书会～运动改造大脑
+链接:https://pan.baidu.com/s/18lQak-nLaVhlzSv5LReWzw 提取码:l1aw 
+10月1~9得到更新
+链接:https://pan.baidu.com/s/1fIEL-GfgNnWi_GdrowH03w 提取码:ikmi 
