修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -31,3 +31,17 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/18lQak-nLaVhlzSv5LReWzw 提取码:l1aw 
 10月1~9得到更新
 链接:https://pan.baidu.com/s/1fIEL-GfgNnWi_GdrowH03w 提取码:ikmi 
+
+### 2018.10.11
+大腦與認知科學
+链接:https://pan.baidu.com/s/14S1JakMhAqh10_gwqkSWfg 提取码:0r09 
+音樂、演化與大腦
+链接:https://pan.baidu.com/s/1klLVIhyIZb0UEHKFLvxy_w 提取码:v6if 
+《改變的起點》化潛力為競爭力 洪蘭 蘇國垚教您「改變人生」！(完整版)
+链接:https://pan.baidu.com/s/1NTyOUNYqQftnfeK7OpOgjg 提取码:a687 
+世界旅遊峰會BBC特別論壇：高速興起的大眾旅遊及其全球影響 
+链接:https://pan.baidu.com/s/1pQLwVt-80isZrWFjFk0mJQ 提取码:9ok8 
+2018-10-10于刚《如何科学用眼，保护视力？》
+链接:https://pan.baidu.com/s/1qc4qZyusCawQZ8xJjVIzLw 提取码:cln2 
+2018.10.11得到更新
+链接:https://pan.baidu.com/s/1U4Zqthr54qwhHOxP8LlpVw 提取码:qa9n 
