修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -45,3 +45,30 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1qc4qZyusCawQZ8xJjVIzLw 提取码:cln2 
 2018.10.11得到更新
 链接:https://pan.baidu.com/s/1U4Zqthr54qwhHOxP8LlpVw 提取码:qa9n 
+
+### 2018.10.15日更新
+混沌商学院更新
+链接:https://pan.baidu.com/s/1qKEeL-1pwZ5pLuMy4k6Xhg 提取码:c1vt 
+混沌创新院更新
+链接:https://pan.baidu.com/s/1vxhNv93f3ChudEpNp9NB_g 提取码:676c 
+2018-10-13～混沌大学～李善友《争议拼多多：如何在饱和竞争领域实现神奇的增长》
+链接:https://pan.baidu.com/s/1OL6KIBXK3fjZF2Rf9bL4pw 提取码:0n96 
+10.13～樊登读书会～掌控谈话
+链接:https://pan.baidu.com/s/1brzs6YwcqLwOHyJC3j6-xg 提取码:n9xa 
+2018.10.15得到更新
+链接:https://pan.baidu.com/s/1EEBSUoAMj0z1hgpvhsRiJQ 提取码:755k 
+【完整版】2018.10.13《文茜世界周報》
+链接:https://pan.baidu.com/s/146grHX4cJ0gr4-q2CdiZcA 提取码:5u58 
+资源群链接：https://pan.baidu.com/mbox/homepage?short=qZjzoew
+
+### 2018.10.16
+【完整版】2018.10.14《文茜世界財經週報》
+链接:https://pan.baidu.com/s/1-GPQ6xyjyvOkwkEduO00mQ 提取码:7256 
+南藝大聯合講堂 當代藝術關鍵詞
+ 链接:https://pan.baidu.com/s/1-ukyQV7zVidM8WSRuiLrGA 提取码:wg3i 
+「文茜講堂-南太平洋上的珍珠」 陳文茜名主播VS米其林二星餐廳創辦人江振誠 
+链接:https://pan.baidu.com/s/1QpDtqnphfoGDAYL1iKnEqw 提取码:w09j 
+【好葉】你以為你還有自由？AI正悄悄的搶走你人生  21世紀的21堂課 
+链接:https://pan.baidu.com/s/1_BwWKv__RVnkb7EXuevuJg 提取码:b3h9 
+2018.10.16得到更新
+链接:https://pan.baidu.com/s/1VxT2-vio2BD9GAYkXfs4Zg 提取码:10s0
