--- a/资源更新.md
+++ b/资源更新.md
@@ -72,3 +72,15 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1_BwWKv__RVnkb7EXuevuJg 提取码:b3h9 
 2018.10.16得到更新
 链接:https://pan.baidu.com/s/1VxT2-vio2BD9GAYkXfs4Zg 提取码:10s0
+
+### 2018.10.17
+【完整版】2018.10.14《文茜世界財經週報》
+链接:https://pan.baidu.com/s/1-GPQ6xyjyvOkwkEduO00mQ 提取码:7256 
+南藝大聯合講堂 當代藝術關鍵詞
+ 链接:https://pan.baidu.com/s/1-ukyQV7zVidM8WSRuiLrGA 提取码:wg3i 
+「文茜講堂-南太平洋上的珍珠」 陳文茜名主播VS米其林二星餐廳創辦人江振誠 
+链接:https://pan.baidu.com/s/1QpDtqnphfoGDAYL1iKnEqw 提取码:w09j 
+【好葉】你以為你還有自由？AI正悄悄的搶走你人生  21世紀的21堂課 
+链接:https://pan.baidu.com/s/1_BwWKv__RVnkb7EXuevuJg 提取码:b3h9 
+2018.10.16得到更新
+链接:https://pan.baidu.com/s/1VxT2-vio2BD9GAYkXfs4Zg 提取码:10s0
