修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -71,7 +71,7 @@ grammar_cjkRuby: true
 【好葉】你以為你還有自由？AI正悄悄的搶走你人生  21世紀的21堂課 
 链接:https://pan.baidu.com/s/1_BwWKv__RVnkb7EXuevuJg 提取码:b3h9 
 2018.10.16得到更新
-链接:https://pan.baidu.com/s/1VxT2-vio2BD9GAYkXfs4Zg 提取码:10s0 
+链接:https://pan.baidu.com/s/1VxT2-vio2BD9GAYkXfs4Zg 提取码:10s0
 
 ### 2018.10.17
 【完整版】2018.10.14《文茜世界財經週報》
@@ -86,42 +86,15 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1VxT2-vio2BD9GAYkXfs4Zg 提取码:10s0
 
 
-VR已逐漸與我們食衣住行育樂等等密不可分，節目將探索更多未知的VR未來！【VR101未來】
-链接:https://pan.baidu.com/s/12e1JvAsTzCedF5VLFvkNKQ 提取码:980l 
-AI+HI：未來世界會是什麼樣貌？「AI 論壇直播 」微軟亞洲研究院 院長洪小文 
-链接:https://pan.baidu.com/s/18SJwm_siL0fi65Tioo2-ZA 提取码:0j4h 
-【科學史沙龍】2018.07.22 第二講：《科學怪人》的妖魔與心魔
-链接:https://pan.baidu.com/s/1HamXFWW3kxkFenREOEjJYQ 提取码:8k0c 
-國立自然科學博物館～2018科普論壇
-链接:https://pan.baidu.com/s/1fsbyU5l7t8nJgpaRFApEbw 提取码:5001
-得到精品课程～怎样获得高质量睡眠
-链接:https://pan.baidu.com/s/1LHHhxK30mWYNschaM9g9Cg 提取码:5214 
-2018.10.19得到更新
-链接:https://pan.baidu.com/s/1XP3zinb0m5Cszw_XptmT3A 提取码:054t 
-
-
-混沌大学王东岳学习坊
-链接:https://pan.baidu.com/s/18g-m9O0siZTVSyXqhonDqg 提取码:jxxg 
-让孩子飞（小视频）
-链接:https://pan.baidu.com/s/1yangZlfqFzge0YHgSJUFsw 提取码:k18u 
-21世紀的21堂課（小视频）
-链接:https://pan.baidu.com/s/1vhiKsIn90yB-Ac-26Q3Qxw 提取码:7417 
-【金一南】教授2018年长三角地区新生代企业家论坛演讲
-链接:https://pan.baidu.com/s/1chFtWslUcOVGJG8Dsd_yhQ 提取码:bo6w 
-【金灿荣】20181015 世贸格局与前景 
-链接:https://pan.baidu.com/s/1HlmwqK2GXX_HMAHdP3t9rg 提取码:3o0a 
-2018.10.20得到更新
-链接:https://pan.baidu.com/s/1CoGPARqteqZY4XgHypOpuQ 提取码:23y1
-
-兒童閱讀診「聊」室｜達人開講：如何養出創造力噴發的小孩？｜親子天下 
-链接:https://pan.baidu.com/s/1BDxGO2GHVhd2vuZDo_z2xA 提取码:980z 
-中小學磨課師K12 MOOCs Taiwan
-链接:https://pan.baidu.com/s/1riCjdjg64OLqfZRXjqB9mg 提取码:uam5 
-2018.10.20【CASE直播】探索20-3講座：鑒往知來：由茫茫過往數據中，淘出新知  陳銘憲教授 （未剪切版）
-链接:https://pan.baidu.com/s/1IiG8QcGLOuP4S4AcAOMgCA 提取码:m66o 
-20181018清華大學科技管理學院_孫運璿科技講座演講 講者：嚴震生 政治大學 國際關係研究中心研究員 講題：民粹政治與經濟發展 
-链接:https://pan.baidu.com/s/1uYJjDSmRSU_IBnutVkijWg 提取码:yo59 
-【直播電腦教學】一堂課學會行銷自己：名片設計 
-链接:https://pan.baidu.com/s/1leaP5Ryf3ngPv4cu3ER7jA 提取码:ru6e 
-2018.10.21得到更新
-链接:https://pan.baidu.com/s/1w28uwcBy_06jxKmPldZbdA 提取码:bm06 
+2018.10.20《文茜世界周報》
+链接:https://pan.baidu.com/s/1gU_-c1V7HjjF4gtIb_rogQ 提取码:i5z6 
+混沌商学院更新
+链接:https://pan.baidu.com/s/1Z3-tqwyp8SA4oY4ky9mSYg 提取码:mh83 
+混沌创新院更新
+链接:https://pan.baidu.com/s/1dttsyfWJevmcIr103Cmy0A 提取码:uu74 
+2018-10-20～混沌大学～廖杰远《微医：如何用科技驱动医疗变革》
+链接:https://pan.baidu.com/s/1aOiNiItP4SzKsnotsyCUtg 提取码:3n1u 
+10.20～樊登读书会～成吉思汗与今日世界之形成
+链接:https://pan.baidu.com/s/1NyPsj2Ijqphbruu2s0edHg 提取码:bz1a 
+2018.10.22得到更新
+链接:https://pan.baidu.com/s/1RIsdtz-o1Y818DvBwvoxrQ 提取码:xw2w 
