修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -98,3 +98,17 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1NyPsj2Ijqphbruu2s0edHg 提取码:bz1a 
 2018.10.22得到更新
 链接:https://pan.baidu.com/s/1RIsdtz-o1Y818DvBwvoxrQ 提取码:xw2w 
+
+### 2018.10.23
+2018.10.20《文茜世界周報》
+链接:https://pan.baidu.com/s/1gU_-c1V7HjjF4gtIb_rogQ 提取码:i5z6 
+混沌商学院更新
+链接:https://pan.baidu.com/s/1Z3-tqwyp8SA4oY4ky9mSYg 提取码:mh83 
+混沌创新院更新
+链接:https://pan.baidu.com/s/1dttsyfWJevmcIr103Cmy0A 提取码:uu74 
+2018-10-20～混沌大学～廖杰远《微医：如何用科技驱动医疗变革》
+链接:https://pan.baidu.com/s/1aOiNiItP4SzKsnotsyCUtg 提取码:3n1u 
+10.20～樊登读书会～成吉思汗与今日世界之形成
+链接:https://pan.baidu.com/s/1NyPsj2Ijqphbruu2s0edHg 提取码:bz1a 
+2018.10.22得到更新
+链接:https://pan.baidu.com/s/1RIsdtz-o1Y818DvBwvoxrQ 提取码:xw2w 
