修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -112,3 +112,69 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1NyPsj2Ijqphbruu2s0edHg 提取码:bz1a 
 2018.10.22得到更新
 链接:https://pan.baidu.com/s/1RIsdtz-o1Y818DvBwvoxrQ 提取码:xw2w 
+
+2018.10.21《文茜世界周報》
+链接:https://pan.baidu.com/s/1sic4D0zUFLD9XDSiDxGcow 提取码:4d41 
+
+凤凰视频
+一虎一席談
+链接:https://pan.baidu.com/s/1UyjO7nKfCgVOx5t6SZxuEQ 提取码:xz0r 
+中国深度财经
+链接:https://pan.baidu.com/s/1ksxj5YxjLAHDTlE0rjmzeQ 提取码:6vv3 
+石評大財經
+链接:https://pan.baidu.com/s/13XHhkdflQPlqwEi5cV8mbQ 提取码:6c80 
+
+2018-10-22涂子沛《数文明》新书首发式
+链接:https://pan.baidu.com/s/1pEdYumoHLIFvbpPmCmtURw 提取码:w528 
+2018.10.23得到更新
+链接:https://pan.baidu.com/s/1sJcG8dEolOJEgKE_OMrifQ 提取码:nr12 
+
+
+遠見精英論壇
+链接:https://pan.baidu.com/s/1PkK8pSwEy4b1_eYdqYaUMw 提取码:elhh 
+2017第十五屆華人領袖遠見高峰會前瞻觀點分享！ 
+链接:https://pan.baidu.com/s/1AZ8IM0lPazbdty1sVJ_7LQ 提取码:3s4k 
+
+
+凤凰视频
+世紀大講堂
+链接:https://pan.baidu.com/s/164fwb0UUXMigeb33Lg6L-w 提取码:9lps 
+一帶一路大暢想
+链接:https://pan.baidu.com/s/1SgG2KxHrYFYnXLjeT4qUlg 提取码:zl13 
+
+2018-10-23得到创始人《例会：宣布得到团队第三季度奖金分配》
+链接:https://pan.baidu.com/s/1LPJzUPIYYgnnrLgUGztshw 提取码:e5l0 
+2018.10.24得到更新
+链接:https://pan.baidu.com/s/12kQwoEwhUECEysKZyxj2nw 提取码:2q2j 
+
+吴军新书～态度
+链接:https://pan.baidu.com/s/1g_NL_3kh85byassT-s8OXw 提取码:4641 
+数文明：大数据如何重塑人类文明、商业形态和个人世界 
+链接:https://pan.baidu.com/s/1g2UvkHkBqkC2HSMySXxcKg 提取码:y5ri 
+
+貿易戰下的中國經濟與台商 
+链接:https://pan.baidu.com/s/1b_cZNlOVXfzp49t1FpeYHQ 提取码:lb71 
+「短鏈革命」正在影響全球製造業，【「59智慧企業‧實踐創新論壇直播」（德國工業4.0權威 桑德勒）】 
+链接:https://pan.baidu.com/s/1dU1OIL3l8tKB_xKw4uHB1A 提取码:o151 
+
+2018-10-24吴军《特别直播：如何用好计算机思维》
+链接:https://pan.baidu.com/s/1wZItxCB10RTzerjPU6fgKw 提取码:d4p4 
+2018.10.25得到更新
+链接:https://pan.baidu.com/s/1EBPq_s2d5iz2vC18lm6XBA 提取码:7wxj 
+资源群链接：https://pan.baidu.com/mbox/homepage?short=dyfGmi
+
+电子书
+注意力经济：如何把大众的注意力变成生意
+链接:https://pan.baidu.com/s/1B5-pjfq945P8XxxjJ1sFmw 提取码:loqv 
+注意力曲线——打败分心与焦虑 
+链接:https://pan.baidu.com/s/1hRBYy-U2DDXt02zPij7K-g 提取码:4x75 
+
+《機器、平台、群眾》導讀會，盧希鵬教授、鄭國威總編輯前瞻對談 (2018台北國際書展)
+链接:https://pan.baidu.com/s/1cCtc2PnX1wJKAupErCaPMQ 提取码:r289 
+探索人工智能講座：開發機器的學習潛能—鑽牛角尖或舉一反三？  林軒田教授 
+链接:https://pan.baidu.com/s/1pfnBxAr-AcZk9EEI_Nl1Fg 提取码:slf9 
+
+2018-10-25汤君健《如何领导不同风格的下属？》
+链接:https://pan.baidu.com/s/1yVPiaCnFmS11rhrmBH5Fvw 提取码:o1hv 
+2018.10.26得到更新
+链接:https://pan.baidu.com/s/1q18-sqZt1RtyJ47knjPPzg 提取码:scud 
