修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -178,3 +178,50 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1yVPiaCnFmS11rhrmBH5Fvw 提取码:o1hv 
 2018.10.26得到更新
 链接:https://pan.baidu.com/s/1q18-sqZt1RtyJ47knjPPzg 提取码:scud 
+
+电子书
+思维的发现：关于决策与判断的科学 
+链接:https://pan.baidu.com/s/1tQHXEEuUk9Dp0Rb-EI4yXw 提取码:d1d2 
+思维简史
+链接:https://pan.baidu.com/s/1nsLS5UByR2U5VII-d4YZZA 提取码:27eh 
+
+2018年台湾中央研究院基因體研究中心開放科普系列演講-正在改變世界的新穎冷凍電子顯微鏡
+链接:https://pan.baidu.com/s/1q9UF-GUA3kuw36uV0JR1Xg 提取码:07j1 
+嚴長壽 在世界地圖上找到自己
+链接:https://pan.baidu.com/s/1O8pHG-N4MOhcl6RfNb393g 提取码:1n64 
+
+2018-10-26混沌创新院·混沌TED《好好思考》
+链接:https://pan.baidu.com/s/1OfPkf1H7CbFJ3JRdnTOLuQ 提取码:15l7 
+
+2018.10.28得到更新
+链接:https://pan.baidu.com/s/1W5iltupRUdC2WhCf4TunJw 提取码:3nw5 
+
+电子书
+工匠精神：日本家族企业的长寿基因
+链接:https://pan.baidu.com/s/10yAlPKKBlTc0SQVLeJh0Lw 提取码:3133 
+列奥纳多·达·芬奇传
+链接:https://pan.baidu.com/s/1XcZIegYQH_L6LZD_gNgxow 提取码:uk46 
+
+『未來「文創國際論壇」』精彩對談 
+链接:https://pan.baidu.com/s/1FHM5C46ZmYqEJR-8ogE3Sw 提取码:rar9 
+
+混沌大学王东岳学习坊
+链接:https://pan.baidu.com/s/1ehrRUXMO9EdAQsSwVLOYxA 提取码:6kyb 
+
+得到精品课程～如何做好孩子的情绪教养
+链接:https://pan.baidu.com/s/13KXbl4dgWk5ZBuLUMRuYTw 提取码:8910 
+2018.10.27得到更新
+链接:https://pan.baidu.com/s/1vAgAWQtQ_fsWYKfKWOApxw 提取码:eo52 
+
+2018.10.27《文茜世界周報》
+链接:https://pan.baidu.com/s/1-XP8LWcaF4x0OWFH59WS_A 提取码:3ik7 
+混沌商学院更新
+链接:https://pan.baidu.com/s/1PiU5RePf_Z0EU7qemGrf_Q 提取码:66g0 
+混沌创新院
+链接:https://pan.baidu.com/s/1SyWFlOEsLb1WUabW2vh8UA 提取码:yr20 
+2018.10.27～混沌大学～鲍忠铁《从数据思维到数据资产变现》
+链接:https://pan.baidu.com/s/1atVEEPn7KS5S6qefgqyZEA 提取码:vv51 
+10.27～樊登读书会～活好
+链接:https://pan.baidu.com/s/1xhNqgbi-FVxH9XGQe9977w 提取码:322d 
+2018.10.29得到更新
+链接:https://pan.baidu.com/s/1SOiflSC_3Qu23RqmCW9Lng 提取码:yg9s 
