修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -225,3 +225,41 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1xhNqgbi-FVxH9XGQe9977w 提取码:322d 
 2018.10.29得到更新
 链接:https://pan.baidu.com/s/1SOiflSC_3Qu23RqmCW9Lng 提取码:yg9s 
+
+电子书
+生命的法则 
+链接:https://pan.baidu.com/s/1kv3soF33WcunAuNmFDkaNw 提取码:gg6x 
+生命3.0 
+链接:https://pan.baidu.com/s/1SY_UktA9bkLt9fdKAPDhnQ 提取码:ej0a
+
+文茜講堂-生命高手Life Master
+链接:https://pan.baidu.com/s/18UNwC2o6N2R__BBwAVh6AA 提取码:johj 
+文茜講堂-逆境哲學Adversity Philosophy
+链接:https://pan.baidu.com/s/1Kgwf6OF6udoE3reOkj75QQ 提取码:14kz 
+
+【观天下第34期】 陈平：中美竞争共存的演变趋势
+链接:https://pan.baidu.com/s/1KqVvgM_FgOU9UEXVKQFnmg 提取码:32r8 
+
+2018-10-30得到创始人《与大家分享刚学到的最佳理念》
+链接:https://pan.baidu.com/s/1z2AqrfORCIcJLpYZXSum9A 提取码:g4ix 
+
+2018.10.31得到更新
+链接:https://pan.baidu.com/s/1ssAyisgMj_lXu6Q_dNzLSg 提取码:z334
+资源群链接：https://pan.baidu.com/mbox/homepage?short=dGfJaYt
+
+
+电子书
+有序：关于心智效率的认知科学
+链接:https://pan.baidu.com/s/1sPKa7kZhxFaxh7wUv4nZJg 提取码:79nx 
+反智时代：谎言中的美国文化
+链接:https://pan.baidu.com/s/1vJkp5qI6IftVZmBr-wLrig 提取码:j853
+
+台湾大学～老梗新葉 -- 談武俠小說的敘事模式與創作突破 │人文心靈系列講座
+链接:https://pan.baidu.com/s/1T8SWDJ9mAEBJsrsnRqDTng 提取码:54b3 
+王宏哲教養育兒寶典
+链接:https://pan.baidu.com/s/1tR0LVzRqBDZ5g120HcTIww 提取码:u2g6 
+
+2018-10-31香帅《如何看清科技金融的未来》
+链接:https://pan.baidu.com/s/1nmLJeWEXoJ0F3ZUc_HsEnw 提取码:0ncg 
+2018.11.1得到更新
+链接:https://pan.baidu.com/s/1R5uDLbh2z1XRxTKth9VS2w 提取码:5z3o 
