--- a/资源更新.md
+++ b/资源更新.md
@@ -263,3 +263,20 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1nmLJeWEXoJ0F3ZUc_HsEnw 提取码:0ncg 
 2018.11.1得到更新
 链接:https://pan.baidu.com/s/1R5uDLbh2z1XRxTKth9VS2w 提取码:5z3o 
+
+电子书
+未來FamilyNo.41_ Nov-18
+链接:https://pan.baidu.com/s/1YAi8gvFYMhzCcZZsQQcBaQ 提取码:iid0 
+华为终端战略
+链接:https://pan.baidu.com/s/1LeCxUixUW3ZjJHbgRCFszQ 提取码:o350 
+理解增长：Google 式增长为何遭遇质疑，如何实现真正的增长
+链接:https://pan.baidu.com/s/1Y2BsvBy5zW2A3rU5h4-_lA 提取码:1sa9 
+
+【直播】羅寶鴻：品格真的很難教？從生活中就能輕鬆建立孩子的好品格！｜親子天下
+链接:https://pan.baidu.com/s/1Pc1RLEYZaPVQrgSkOaQl-w 提取码:q64v 
+不給糖就搗蛋！戒糖誘惑大挑戰！超人氣兒科醫師黃瑽寧醫師出任務到你家
+链接:https://pan.baidu.com/s/1lm1_4AttBYb-w98sMMj0cQ 提取码:97d3 
+
+2018.11.2得到更新
+链接:https://pan.baidu.com/s/1kgLhpS8Ut3BKnima-xQEMw 提取码:6955
+资源群链接：https://pan.baidu.com/mbox/homepage?short=ggngCYf
