修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -280,3 +280,37 @@ grammar_cjkRuby: true
 2018.11.2得到更新
 链接:https://pan.baidu.com/s/1kgLhpS8Ut3BKnima-xQEMw 提取码:6955
 资源群链接：https://pan.baidu.com/mbox/homepage?short=ggngCYf
+
+电子书
+未來FamilyNo.41_ Nov-18
+链接:https://pan.baidu.com/s/1YAi8gvFYMhzCcZZsQQcBaQ 提取码:iid0 
+华为终端战略
+链接:https://pan.baidu.com/s/1LeCxUixUW3ZjJHbgRCFszQ 提取码:o350 
+理解增长：Google 式增长为何遭遇质疑，如何实现真正的增长
+链接:https://pan.baidu.com/s/1Y2BsvBy5zW2A3rU5h4-_lA 提取码:1sa9 
+
+【直播】羅寶鴻：品格真的很難教？從生活中就能輕鬆建立孩子的好品格！｜親子天下
+链接:https://pan.baidu.com/s/1Pc1RLEYZaPVQrgSkOaQl-w 提取码:q64v 
+不給糖就搗蛋！戒糖誘惑大挑戰！超人氣兒科醫師黃瑽寧醫師出任務到你家
+链接:https://pan.baidu.com/s/1lm1_4AttBYb-w98sMMj0cQ 提取码:97d3 
+
+2018.11.2得到更新
+链接:https://pan.baidu.com/s/1kgLhpS8Ut3BKnima-xQEMw 提取码:6955
+资源群链接：https://pan.baidu.com/mbox/homepage?short=ggngCYf
+
+
+2018.11.04【文茜世界財經週報】
+链接:https://pan.baidu.com/s/1TEVhGXlQdGpsNaeSEKeYVw 提取码:688b 
+
+《一虎一席談》20181103
+链接:https://pan.baidu.com/s/1NoM0-mmkGH-UFBbdEHHn1g 提取码:zo8j 
+《石評大財經》20181101
+链接:https://pan.baidu.com/s/1zFHxl-IcvXUl5VUIqQo0WA 提取码:i9ba
+《中國深度財經》 20181103
+链接:https://pan.baidu.com/s/100k87pbOY-Li-O_kcbQEAQ 提取码:79cw
+
+孙正义经营哲学二十六讲（更新中）
+链接:https://pan.baidu.com/s/1PteEdUKobJPq8U_hIgw-ng 提取码:lrsb
+
+2018.11.6得到更新
+链接:https://pan.baidu.com/s/19ganhhlfwCcrTOh4-cmrJg 提取码:2e3w
