修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -314,3 +314,36 @@ grammar_cjkRuby: true
 
 2018.11.6得到更新
 链接:https://pan.baidu.com/s/19ganhhlfwCcrTOh4-cmrJg 提取码:2e3w
+
+电子书
+超人诞生：人类增强的新技术
+链接:https://pan.baidu.com/s/1_T_wmY1upS0nmmjH-4rX5w 提取码:v88h 
+超级技术：改变未来社会和商业的技术趋势
+链接:https://pan.baidu.com/s/1HmB9gZ-prnT7vFGVukLx-A 提取码:pv7j 
+
+台湾大学～从經濟學看世界
+链接:https://pan.baidu.com/s/1HQcRBms9YBVXBKWToJQweQ 提取码:9fay
+
+2018-11-06得到创始人《例会：我们容易犯的蠢错误》
+链接:https://pan.baidu.com/s/1GlGDvT7zR3GmaK6jNqnHTg 提取码:jh10
+2018得到日更新合集
+链接:https://pan.baidu.com/s/1REa-r467lCd3Q7BVgxVqpQ 提取码:htzk
+2018.11.7得到更新
+链接:https://pan.baidu.com/s/12lO6hKfFI92dQFLKqAkpBg 提取码:pv1b
+
+电子书
+创造的本源
+链接:https://pan.baidu.com/s/1gtK4VHcYajrd3dNwt6Pi4Q 提取码:k4zg
+5秒法则
+链接:https://pan.baidu.com/s/1JLdpj9Uk0nOIo9jqOJcgkA 提取码:r331
+
+国家地理~火星時代
+链接:https://pan.baidu.com/s/13CCoPL1nPOQH-69j1qsYzA 提取码:e4j2
+10月份知識饗宴「熱電科技：從家用冰箱到太空通信」
+链接:https://pan.baidu.com/s/1HvkMXVLudkjRizXAD9XbKA 提取码:b7pq
+
+2018-11-07张遇生《给你一套睡得好的系统方法》
+链接:https://pan.baidu.com/s/1nzOC3uwh9p_WI-CqvB9N9w 提取码:278q
+2018.11.8得到更新
+链接:https://pan.baidu.com/s/1TM0WCXg3naWqEa-qCo8Qdg 提取码:a896
+得到资源群链接：https://pan.baidu.com/mbox/homepage?short=jJGNlkE
