修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -347,3 +347,54 @@ grammar_cjkRuby: true
 2018.11.8得到更新
 链接:https://pan.baidu.com/s/1TM0WCXg3naWqEa-qCo8Qdg 提取码:a896
 得到资源群链接：https://pan.baidu.com/mbox/homepage?short=jJGNlkE
+
+电子书
+零秒工作
+链接:https://pan.baidu.com/s/1C7rnPTgpTF8gvVLmGKNs6w 提取码:mp7v
+创业融资，从一个好故事开始
+链接:https://pan.baidu.com/s/1v-yaD8-6461wcWt-Taon2Q 提取码:7o10
+
+林志玲姐姐给小朋友的修养课
+链接:https://pan.baidu.com/s/1arReJaskXhNOInekUiIDEQ 提取码:i5g3
+复旦陈正宏《史记》精讲
+链接:https://pan.baidu.com/s/1ThR5NDUvP7y02YkS9_SYBQ 提取码:9859
+ 林奇的财富圈（更新中）
+链接:https://pan.baidu.com/s/11Ey3RQmvzgmVgthk2JRZjA 提取码:w5hc
+
+2018.11.11
+链接:https://pan.baidu.com/s/1c8wn2WQrMFdxK7x8C8nIOA 提取码:5gp7
+
+2018.11.10《文茜世界周報》
+链接:https://pan.baidu.com/s/1vHdV4mMp4K7ZPBrbfufdZA 提取码:5yef
+
+混沌创新院更新
+链接:https://pan.baidu.com/s/1kgkemBiK8kx-CIFhWwoH7A 提取码:x24s
+混沌商学院更新
+链接:https://pan.baidu.com/s/1Ee9R_WcxqyZFalX7WIVcSg 提取码:b5ll
+混沌大学～2018-11-10李善友《美团分形：如何打造破坏性创新引擎》
+链接:https://pan.baidu.com/s/1Q3z0JwZGcdeNYQr_ZZ7Pwg 提取码:u7w3
+
+樊登读书会～11.10扫除道
+链接:https://pan.baidu.com/s/1qsfQxaz2nS57aRH8QDpuXg 提取码:o7nq
+
+2018-11-11双11特卖会《罗胖解读5本年度好书》
+链接:https://pan.baidu.com/s/1Gy3Hs60NB2y0A6YwozUPVw 提取码:l0kt
+2018.11.12得到更新
+链接:https://pan.baidu.com/s/1GgeUNNLS5tmasBNj_RADUQ 提取码:7du9
+
+一本好书
+链接:https://pan.baidu.com/s/1Q5X9mutEgDMtQNbMbdPKVw 提取码:vcc8
+
+北京大学杨立华四书精读2014
+链接:https://pan.baidu.com/s/10RMqCCFCVKtISVwYBxBDbA 提取码:rerr
+13-14学年第一学期 杨立华中哲史下录音
+链接:https://pan.baidu.com/s/1FO5fHycQltaxS_jHRWuVFg 提取码:w8y1
+哲学与时代问题的解决：以北宋道学为核心
+链接:https://pan.baidu.com/s/1Jvw0UceIRwVquE7VuZFfUw 提取码:6vit
+
+2018.11.11《文茜世界財經週報》
+链接:https://pan.baidu.com/s/10I4eG9LE88uTKK_U47ryrw 提取码:68jr
+
+2018.11.13得到更新
+链接:https://pan.baidu.com/s/1IPobE1OXsRXccTa9IxczmQ 提取码:eg30
+资源群链接：https://pan.baidu.com/mbox/homepage?short=dGAmdnN
