修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -400,3 +400,52 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1IPobE1OXsRXccTa9IxczmQ 提取码:eg30
 资源群链接：https://pan.baidu.com/mbox/homepage?short=dGAmdnN
 
+
+电子书
+心智跃迁四部曲
+链接:https://pan.baidu.com/s/10cOg5MCemDDhS8-RPVRepg 提取码:er0y
+华杉讲透国学经典
+链接:https://pan.baidu.com/s/1H2B7KUKJzqwTYtIyPlM6sQ 提取码:5s51
+
+【青课3.0 第一集】张捷：中美贸易战，谁会是赢家
+链接:https://pan.baidu.com/s/1DNgE1QAHokQGaPkn-Q-T8w 提取码:viis
+謝金河社長講座『2018全球經濟趨勢與投資策略 』
+链接:https://pan.baidu.com/s/1Nj72veZoF103gPBOBv2Bow 提取码:r9ko
+
+2018-11-13得到创始人《本周例会：如何避免目标的丢失？》
+链接:https://pan.baidu.com/s/1-gckUaFdfW7Trn0e0HtjyQ 提取码:dcnh
+2018.11.14得到更新
+链接:https://pan.baidu.com/s/1NlNhdJcTyqqAQ1cRi7dT6Q 提取码:m452
+
+电子书
+与原生家庭和解
+链接:https://pan.baidu.com/s/1h7Ghy8jHByFfkGtWRueK7A 提取码:hc0b
+互联互通的金融大时代：小加随笔
+链接:https://pan.baidu.com/s/1UxK94lpQNZ-6pyOnmGBgWg 提取码:vf5v
+
+青课2.0 好好学习
+链接:https://pan.baidu.com/s/1A4n5qQcmC0OnhGj-JPl11Q 提取码:rfxd
+2018.11.10《一虎一席談》
+链接:https://pan.baidu.com/s/1sk1We-ixk603Yc1t1Px4dQ 提取码:0f4z
+
+2018-11-14薛兆丰携手马东《感谢经济学课30万+用户》
+链接:https://pan.baidu.com/s/1L1yJhm-6FbsROFGkk7le8Q 提取码:4gce
+2018.11.15得到更新
+链接:https://pan.baidu.com/s/1lcsO55ftXguTl14AyE-GkA 提取码:064i
+资源群链接：https://pan.baidu.com/mbox/homepage?short=eTjfRj0
+
+：：：：电子书
+奈飞文化手册
+链接:https://pan.baidu.com/s/1ddKrQQ0eSvAMDTHhSMaZuA 提取码:9dx1
+高维度思考法
+链接:https://pan.baidu.com/s/1THsdZfkEpZt4MoRPBpg3LA 提取码:qo66
+
+「心教─探究內在冰山底下的想望」李崇建老師
+链接:https://pan.baidu.com/s/1lTAF1CFqWh0emcXIB2Clzw 提取码:w4l8
+11.13文茜講堂我的不完美
+链接:https://pan.baidu.com/s/1et50CvnPDiMScSpwfxFYEw 提取码:gu31
+
+得到精品课程～如何开发孩子的绘画潜力
+链接:https://pan.baidu.com/s/1OfnzdzcHP6972b8cOm_0kA 提取码:4y7m
+2018.11.16得到更新
+链接:https://pan.baidu.com/s/1Z3agK9dbGaldpBCNn2iXgA 提取码:xczb
