修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -449,3 +449,41 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1OfnzdzcHP6972b8cOm_0kA 提取码:4y7m
 2018.11.16得到更新
 链接:https://pan.baidu.com/s/1Z3agK9dbGaldpBCNn2iXgA 提取码:xczb
+
+
+电子书
+活好：我这样活到105岁
+链接:https://pan.baidu.com/s/1_zCvynf-RPpSAjK1VUZgXg 提取码:zbp4
+谁将主宰世界：支配世界的思想和权力
+链接:https://pan.baidu.com/s/1XVfq6qiEzA89uccSRfJcNA 提取码:arqp
+
+杨立华-论语——深入解读(小师弟推荐）
+链接:https://pan.baidu.com/s/16BWoT94qal6XC0MbubR4YQ 提取码:w7w7 
+
+20181112中国传统文化的人文特质 北大楼宇烈讲国学 中华两岸国学大讲堂第四期
+链接:https://pan.baidu.com/s/1J73Rjgtr3WdfWWEbiVujEA 提取码:l2t2
+20181115第二届中国民宿大会 中国北方民宿联盟成立会 pk AIRBNB 
+链接:https://pan.baidu.com/s/1hwVqoWuwrTvz6N-ydpHjgQ 提取码:bxok
+
+2018.11.18得到更新
+链接:https://pan.baidu.com/s/13eY5YIbE-siXLruCP37WzQ 提取码:fg1o
+资源群链接：https://pan.baidu.com/mbox/homepage?short=qZ7isMS
+
+
+混沌创新院更新
+链接:https://pan.baidu.com/s/12XHtrymSqzxOt-hgiOMU6g 提取码:iw60
+混沌商学院更新
+链接:https://pan.baidu.com/s/19Ppk-kabOUrlvWlADGLnLw 提取码:38ar
+混沌大学～2018-11-17Adam Cheyer《初创公司如何洞察商业机会？》
+链接:https://pan.baidu.com/s/1RiSrGu0qcObm153y0iehCA 提取码:0c73
+
+樊登读书会～11.17～学会快乐
+链接:https://pan.baidu.com/s/1_nkBMvRUcywtzrYNeTyD7w 提取码:5958
+
+20181107世界互联网领先科技成果发布会 
+链接:https://pan.baidu.com/s/1UB7ua2p57Y_E4Tcqb4-k7g 提取码:0ti8
+
+2018.11.19得到更新
+链接:https://pan.baidu.com/s/1F0mUEb8JKeTdejTOhLRhHA 提取码:3m8z
+
+喜欢本群可以拉朋友来
