修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -486,3 +486,19 @@ grammar_cjkRuby: true
 2018.11.19得到更新
 链接:https://pan.baidu.com/s/1F0mUEb8JKeTdejTOhLRhHA 提取码:3m8z
 
+电子书
+我的世界观
+链接:https://pan.baidu.com/s/1j0B87osX4Au_8gqSQhjgtA 提取码:i95f
+大自然的社交网络
+链接:https://pan.baidu.com/s/1D0kcO-R4m6kGoBjl-6UZ6g 提取码:7vgh
+
+黃老斯的玩具樂園
+链接:https://pan.baidu.com/s/16hXvVtUi607R-oCVepdRzQ 提取码:019p
+台湾各大学教授訪談
+链接:https://pan.baidu.com/s/1cnliWsfncs1wpSwLk6a6pg 提取码:zp2w
+2018.11.18《文茜世界財經週報》
+链接:https://pan.baidu.com/s/1PijDRuW2Aa-agm51wKLgpw 提取码:g8ar
+
+2018.11.20得到更新
+链接:https://pan.baidu.com/s/13ZNQvy4Qg_wpOtuboj-e1A 提取码:d3fg
+资源群链接：https://pan.baidu.com/mbox/homepage?short=pMFrU0j
