修改文件: 资源更新.md

--- a/资源更新.md
+++ b/资源更新.md
@@ -502,3 +502,23 @@ grammar_cjkRuby: true
 2018.11.20得到更新
 链接:https://pan.baidu.com/s/13ZNQvy4Qg_wpOtuboj-e1A 提取码:d3fg
 资源群链接：https://pan.baidu.com/mbox/homepage?short=pMFrU0j
+
+电子书
+直觉泵和其他思考工具
+链接:https://pan.baidu.com/s/1gQw0IC5A6a80ow52wrnqtw 提取码:ho9n
+认知天性：让学习轻而易举的心理学规律
+链接:https://pan.baidu.com/s/1sC_sPAnBARVXjplfDZCZeA 提取码:4z69
+
+2018.11.18俞敏洪.做成功孩子背后的父母有多难！(请大家冷静听完俞敏洪的演讲，再批评，谢谢）
+链接:https://pan.baidu.com/s/1NmwKNRvopN4o3xqGt2tQ6A 提取码:5zto
+
+
+20181118彼得·德鲁克中国管理论坛
+链接:https://pan.baidu.com/s/1VWHw6C6YuzMX9oNDeoNKrQ 提取码:9s71
+
+2018-11-20得到创始人《怎么用打战役的方式组织日常工作？》
+链接:https://pan.baidu.com/s/1XXFZaVihnWQMeQKUFl6G5w 提取码:rfus
+2018.11.21得到更新
+链接:https://pan.baidu.com/s/17hSn_Gqj82Z1q5QCDXslMA 提取码:m29l
+
+百度云资源群：https://pan.baidu.com/mbox/homepage?short=hsYmUvM
