修改文件: 2018-11-27资源更新.md

--- a/2018-11-27资源更新.md
+++ b/2018-11-27资源更新.md
@@ -39,3 +39,31 @@ grammar_cjkRuby: true
 链接:https://pan.baidu.com/s/1EUz8oGfXbn6JyVcx2evNsw 提取码:jwx3
 
 何其幸运，活在这珍贵的人间。早上起来，阳光满满地落在你的手上，就像在接受一份来自大自然的礼物，你闻得到花香，听得见鸟叫虫鸣，看得见星辰大海和这纷繁的人间，一切都值得好好珍惜、好好感受，因为应该珍惜的东西，像江水一样在你身边流淌，一去不复返。
+
+（全）共20G 新媒体文案写作+运营20套课程 20G文件！超值干货，吐血整理！跟着课程学习，打造爆款文章！
+
+新媒体必备！轻松打造100w+爆文
+
+新媒体业界知名作者。
+
+20套新媒体课程
+
+链接：https://pan.baidu.com/s/1DfZHZTgl-fIAPXwO-VbN5Q 密码：nsge
+
+电子版
+思维简史
+链接:https://pan.baidu.com/s/1aXFxZgZIztveG6M1nhQcHQ 提取码:3m66
+思维的发现：关于决策与判断的科学 
+链接:https://pan.baidu.com/s/1jcDjhoWgJIEi5f7VS2lGqg 提取码:4xd5
+
+樊登读书会合集
+链接:https://pan.baidu.com/s/17bS3FG-xcbJPp0vDXmmVDA 提取码:01ny
+全球大学～第五届南南論壇大同之道理論與實踐（英文版）
+链接:https://pan.baidu.com/s/1BXgoI-aa36v7KEwFplK_FA 提取码:y976
+
+得到文字版
+链接:https://pan.baidu.com/s/1GirW5GlXr2AGUH12Rdzlqw 提取码:23br
+2018.11.27得到更新
+链接:https://pan.baidu.com/s/1GoQemP-t-VkuR-9LXXZfZw 提取码:j1u1
+
+生在富贵里想去体会穷人的满足，生在贫困却不知道富人的烦恼，我们经常的做梦，却总是难以醒来，经常的幻想却总是难以实现，经常的抱怨，却总是不去努力，经常的计划却总是没有勇于实践。
