修改文件: 2018-12-18 用普通手机拍出专业级照片.md

--- a/2018-12-18 用普通手机拍出专业级照片.md
+++ b/2018-12-18 用普通手机拍出专业级照片.md
@@ -4,5 +4,22 @@ tags: 新建,模板,小书匠
 grammar_cjkRuby: true
 ---
 
+### 用普通手机拍出专业级照片
 
-欢迎使用 **{小书匠}(xiaoshujiang)编辑器**，您可以通过 `小书匠主按钮>模板` 里的模板管理来改变新建文章的内容。
+![](https://img.yojiang.cn/upload/article/image/20170921/18/2a655ebb1230fb36?imageView2/2/w/2854)
+
+假期，不少朋友都在摩拳擦掌准备周游列国。
+
+
+
+出去游玩的同时，大家也绝对不忘拍摄美照分享微博，或者放到朋友圈上惹朋友们羡慕妒忌。
+
+![](https://img.yojiang.cn/upload/article/image/20170921/18/a81474fda597094e?imageView2/2/w/2854)
+
+很多朋友在出行时为了保证拍摄效果，都选择带着沉重麻烦且贵重的摄影器材，光是三脚架、镜头就已经占了旅行箱的大半。
+
+
+
+每到一个地方，都需要布置一个阵仗，光是搬运器材都浪费了半天时间，失去了静心欣赏美景的时机。
+
+![](https://img.yojiang.cn/upload/article/image/20170921/18/b42f5059d3133820?imageView2/2/w/775)
