修改文件: 2018-12-18 用普通手机拍出专业级照片.md

--- a/2018-12-18 用普通手机拍出专业级照片.md
+++ b/2018-12-18 用普通手机拍出专业级照片.md
@@ -23,3 +23,109 @@ grammar_cjkRuby: true
 每到一个地方，都需要布置一个阵仗，光是搬运器材都浪费了半天时间，失去了静心欣赏美景的时机。
 
 ![](https://img.yojiang.cn/upload/article/image/20170921/18/b42f5059d3133820?imageView2/2/w/775)
+
+其实，想要记录美好、定格精彩，哪需要这么麻烦。
+
+
+
+像以上那两张美不胜收的照片，你以为都是用专业单反拍摄的吗？
+
+<p style="center">
+靠手机拍出单反效果
+
+便捷的摄影方式改变你的生活
+</p>
+对于一件事情的极致热爱，动机可以很复杂。
+
+
+
+比如当时木西女友要去英国交换，他的生活开始变得简单；比如买相机仅仅是因为旅游去了好地方，他想要更好地记录。
+
+
+
+比如拍到了好的照片，他也想传到社交网络上嘚瑟一下；比如也会觉得单反是一件小奢侈品，所以想买来提升自己生活的逼格……
+
+![](https://img.yojiang.cn/upload/article/image/20170921/18/10a87c795c34e949?imageView2/2/w/786)
+
+结果，这原本对摄影复杂的动机，造就了木西在摄影路上的纯粹。
+
+
+
+在一届摄影训练营里，一位老师曾说了一句让木西醍醐灌顶的话：“摄影师你不要觉得自己有什么了不起的，照片拍得好，是东西本来就好。”
+
+
+
+这对于当时刚刚摸到点门路，正要膨胀的木西来说，是一个很重要的警示。
+
+![](https://img.yojiang.cn/upload/article/image/20170921/18/cabc4f9cf86fd43c?imageView2/2/w/2854)
+
+老师的那番话对于木西的影响很深。
+
+
+
+摄影师，其实只是一个故事诉说者，他用镜头表达着每个故事的悲欢离合。一张好照片最重要的元素，正是看摄影师能不能把这个故事讲好。
+
+
+
+而木西就是这样，一步步对摄影从痴狂、膨胀、到精益求精。
+
+
+
+他享受着秋日树影下的路人身影，雨后氤氲的空气里湿漉漉的雕塑和桥墩。当初冬的第一场雪来临时，他拿着略带焦外旋转的凤凰50 1.8, 拍下路灯下大如鹅毛的雪花。
+
+
+
+这就是追求，他不觉得苦，自然也不觉得累。
+
+![](https://img.yojiang.cn/upload/article/image/20170921/18/2b5a5d6700b88719?imageView2/2/w/2854)
+
+之后的路上，木西收获了很多国际大奖，但他并不满足于普通的单反拍摄。
+
+
+
+因为想成为一个时代的记录者，必须顺应使用改时代的工具。这个时代给予我们最方便的记录方式，无疑就是手机摄影。
+
+用手机摄影就=拍不出好照片？
+
+
+
+这对于一个热爱摄影的人来说，器材，绝对不是限制他的条条框框。
+
+
+
+木西开始对手机摄影作出不同的尝试，他懂得把手机摄影与单反摄影的优缺点结合起来，使手机也能拍出专业单反大片的效果。
+
+
+
+他的手机摄影作品，曾经拿下无数大奖，更受邀成为华为Mate9手机官方样张拍摄者。
+
+木西认为：手机比相机更灵活易用，是真正生活化的拍摄工具。现在的智能手机，在很多方面已经不逊色于单反相机，只要掌握正确的技巧，完全可以拍摄出专业级的照片。
+
+
+尤其对于没有专业器材的人来说，手机拍摄是他们记录生活、与世界链接的重要工具。它承载着我们的情感，也表达着我们的故事。
+
+多数朋友已经习惯使用手机进行拍摄，但他们仍然觉得自己用手机拍摄的照片效果特别差，总把失败归咎于是由于没有使用专业的单反器材。
+
+
+
+可你知道吗，同样是使用手机拍摄，以上的全部照片，都是木西老师用一部普通常见、人手必备的手机完成。
+
+
+
+这时候，你会不会诧异，原来手机竟然还可以拍出美得令人窒息的照片？
+
+
+
+手机也能拍出专业单反大片的效果？
+
+![](https://img.yojiang.cn/upload/article/image/20170921/18/c5d8987a2167009e?imageView2/2/w/2854)
+
+当然，一部贵重且沉重的相机能拍摄的，一部轻便且日常的手机也能做到。
+
+
+
+关键，是你如何掌握手机拍摄的核心技巧。
+
+
+
+![enter description here](https://img.yojiang.cn/upload/article_images/20170921/18/66fac76b67297184?imageView2/2/w/2854)
